# commander

./: .gitattributes  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json
crates/cockpit/: Cargo.toml
crates/cockpit/src/: dock.rs  git.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
plugins/claude-code/: .mcp.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: open.md
plugins/claude-code/skills/commander/: SKILL.md
plugins/codex/: README.md  config.toml
plugins/codex/skills/commander/: SKILL.md
plugins/grok/: README.md
src/: main.rs
