[package]
name = "commander"
version = "0.1.0"
edition = "2021"
description = "Midnight Commander-style dual-pane file UI for agentic CLIs (Claude Code, Codex, Hermes, OpenClaw)"
license = "MIT"
default-run = "commander"

[[bin]]
name = "commander"
path = "src/main.rs"

[workspace]
members = ["crates/core", "crates/ipc", "crates/tui", "crates/mcp", "crates/cockpit"]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
# internal crates
commander-core = { path = "crates/core" }
commander-ipc = { path = "crates/ipc" }
commander-tui = { path = "crates/tui" }
commander-mcp = { path = "crates/mcp" }

[dependencies]
anyhow = { workspace = true }
commander-tui = { workspace = true }
commander-mcp = { workspace = true }
